2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: improve some comments in the TAP driver
	* lib/tap-driver (handle_tap_plan): Improve comments describing
	possible errors in a "plan with SKIP" directive.

2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: non-zero exit status after "Bail out!" should not be reported
	This new behaviour is more consistent with that of the `prove'
	utility.  Also, experience with the use of TAP in the Automake's
	own test suite has shown that reporting non-zero exit status from
	a script after it has issued a "Bail out!" directive is mostly
	redundant, more introducing noise rather than conveying useful
	information.
	* lib/tap-driver (finish): Inline the part of it that was getting
	the script exit status ...
	(main): ... in here.
	* tests/tap-bailout-badexit.test: New test.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: a "plan with SKIP" after test results is an error
	This new behaviour is both more natural and more consistent with
	that of the `prove' utility.
	* lib/tap-driver (handle_tap_plan): Do not stop TAP parsing when
	a "plan with SKIP" line (e.g., "1..0 # SKIP") is encountered, and
	do not print a "SKIP" line if some TAP result has already been
	seen.
	* tests/tap-skip-whole.test: Adapt.
	* tests/tap-skip-whole-lastline.test: Likewise.
	* tests/tap-global-result.test: Adapt and extend.
	* tests/tap-skip-plan-errors.test: Likewise, and fix an obsolete
	small part of a comment.
	* tests/tap-skip-whole-bailout.test: New test.
	* tests/tap-skip-whole-unplanned.test: Likewise.
	* tests/tap-skip-whole-continue.test: Likewise.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test harness: avoid possible fork bomb
	This fixes a regression w.r.t. the master branch, exposed by
	test 'parallel-tests-fork-bomb.test'.