@@ -1,5 +1,13 @@
 2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: more TAP driver consistency w.r.t. 'prove'
+	* tests/skip-results-with-planskip.test: New test, verifies that
+	test results seen in a TAP stream that has a "plan with SKIP" are
+	flagged as errors.
+	* tests/Makefile.am (tap_with_common_setup_tests): Update.
+
+2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap: improve some comments in the TAP driver
 	* lib/tap-driver (handle_tap_plan): Improve comments describing
 	possible errors in a "plan with SKIP" directive.
